Update to Xamarin project

--- a/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
+++ b/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\DataInitializationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\InputPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
