--- a/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
+++ b/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="System.Memory" Version="4.5.3" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="UnicodeInformation" Version="2.3.0.26" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
 
@@ -32,10 +32,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\ButtonWrapListView.xaml.cs">
+      <DependentUpon>ButtonWrapListView.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\DataInitializationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\InputPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ButtonWrapListView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
