--- a/DidacticalEnigma.Xam.UWP/DidacticalEnigma.Xam.UWP.csproj
+++ b/DidacticalEnigma.Xam.UWP/DidacticalEnigma.Xam.UWP.csproj
@@ -138,10 +138,6 @@
     <Content Include="cancel.png" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -159,6 +155,12 @@
       <Project>{9A19103F-16F7-4668-BE54-9A1E7A4F7556}</Project>
       <Name>DidacticalEnigma.Xam</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="App.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </ApplicationDefinition>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
