--- a/DidacticalEnigma/App.config
+++ b/DidacticalEnigma/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <appSettings>
     <add key="SentryDsn" value="https://2a2ec5ffdaca45f79428cb5addd7ea38@sentry.io/1406473" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
