--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -3,6 +3,7 @@
   <package id="AsyncEnumerator" version="2.2.2" targetFramework="net461" />
   <package id="Gu.Analyzers" version="1.3.2.0-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="2019.1.1" targetFramework="net461" />
   <package id="LibJpConjSharp" version="0.5.8" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
