--- a/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
+++ b/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <DefineConstants>AVALONIA</DefineConstants>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
