Extend Rest Api

--- a/DidacticalEnigma.RestApi/DidacticalEnigma.RestApi.csproj
+++ b/DidacticalEnigma.RestApi/DidacticalEnigma.RestApi.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Gu.Inject" Version="0.1.0-dev" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.0.0" />
   </ItemGroup>
