Add AutoGlosser endpoint to API

--- a/DidacticalEnigma.RestApi/appsettings.json
+++ b/DidacticalEnigma.RestApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataConfiguration": {
+    "DataDirectory": "<INSERT DATA DIRECTORY HERE>"
+  }
 }
