--- a/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
+++ b/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <PackageVersion>0.9.6</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
