--- a/DidacticalEnigma.WPF/packages.config
+++ b/DidacticalEnigma.WPF/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AsyncEnumerator" version="2.2.2" targetFramework="net461" />
+  <package id="DidacticalEnigma.Core" version="0.9.6" targetFramework="net461" />
   <package id="Gu.Analyzers" version="1.6.10-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
+  <package id="JDict" version="0.9.6" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="2019.1.1" targetFramework="net461" />
   <package id="LibJpConjSharp" version="0.7.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="net461" />
@@ -67,6 +69,8 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="TinyIndex" version="0.4.0" targetFramework="net461" />
   <package id="UnicodeInformation" version="2.3.0.26" targetFramework="net461" />
+  <package id="Utility" version="0.9.6" targetFramework="net461" />
   <package id="WpfAnalyzers" version="3.1.1" targetFramework="net461" developmentDependency="true" />
 </packages>
