--- a/DidacticalEnigma.WPF/packages.config
+++ b/DidacticalEnigma.WPF/packages.config
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AsyncEnumerator" version="2.2.2" targetFramework="net461" />
-  <package id="DidacticalEnigma.Core" version="0.9.6" targetFramework="net461" />
+  <package id="DidacticalEnigma.Core" version="0.9.6.1" targetFramework="net461" />
+  <package id="DidacticalEnigma.Project" version="0.9.6" targetFramework="net461" />
   <package id="Gu.Analyzers" version="1.6.10-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
-  <package id="JDict" version="0.9.6" targetFramework="net461" />
-  <package id="JetBrains.Annotations" version="2019.1.1" targetFramework="net461" />
+  <package id="JDict" version="0.9.6.1" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="2020.1.0" targetFramework="net461" />
   <package id="LibJpConjSharp" version="0.7.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="NMeCabNetStandard" version="0.7.3" targetFramework="net461" />
   <package id="Optional" version="4.0.0" targetFramework="net461" />
   <package id="PropertyChangedAnalyzers" version="3.2.1" targetFramework="net461" developmentDependency="true" />
@@ -71,6 +72,6 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="TinyIndex" version="0.4.0" targetFramework="net461" />
   <package id="UnicodeInformation" version="2.3.0.26" targetFramework="net461" />
-  <package id="Utility" version="0.9.6" targetFramework="net461" />
+  <package id="Utility" version="0.9.7" targetFramework="net461" />
   <package id="WpfAnalyzers" version="3.1.1" targetFramework="net461" developmentDependency="true" />
 </packages>
