--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,10 @@ build_script:
   - ps: if($isWindows) { nuget restore; }
   - ps: dotnet publish DidacticalEnigma.Misc/MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r linux-x64 --self-contained false -o $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/Release/MagicTranslatorGlosser
   - ps: dotnet publish DidacticalEnigma.Misc/MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r win-x64 --self-contained false -o $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/Release/MagicTranslatorGlosser
-  - ps: if($isWindows) { msbuild -verbosity:minimal DidacticalEnigma.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"; }
+  - ps: if($isWindows) { mkdir $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/Release; }
+  - ps: if($isWindows) { msbuild -verbosity:minimal DidacticalEnigma.Updater.WPF\DidacticalEnigma.Updater.WPF.csproj /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"; }
+  - ps: if($isWindows) { mv $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.Updater.WPF/bin/Release/* $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/Release; }
+  - ps: if($isWindows) { msbuild -verbosity:minimal DidacticalEnigma.WPF\DidacticalEnigma.WPF.csproj /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"; }
   - ps: if($isLinux) { dotnet build $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.Core/AutomatedTests.NetCore/AutomatedTests.NetCore.csproj }
 after_build:
   - ps: if($isWindows) { mv $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/Release $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma.WPF/bin/DidacticalEnigma; }
