--- a/DidacticalEnigma.WPF/DidacticalEnigma.WPF.csproj
+++ b/DidacticalEnigma.WPF/DidacticalEnigma.WPF.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="DidacticalEnigma.Core" Version="0.9.7.1" />
     <PackageReference Include="DidacticalEnigma.IronPython" Version="0.1.0" />
+    <PackageReference Include="DidacticalEnigma.Mem.Client" Version="0.9.0.5" />
     <PackageReference Include="DidacticalEnigma.Project" Version="0.9.6" />
     <PackageReference Include="Gu.Analyzers" Version="1.6.10-dev" />
     <PackageReference Include="Gu.Inject" Version="0.3.9" />
